// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectableSearch is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="list"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="aria-label"
      aria-owns="list"
      autocomplete="off"
      class="ouiFieldSearch ouiFieldSearch--fullWidth ouiSelectableSearch testClass1 testClass2"
      data-test-subj="test subject string"
      role="combobox"
      type="search"
      value=""
    />
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="search"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableSearch props defaultValue 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="list"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="list"
      autocomplete="off"
      class="ouiFieldSearch ouiFieldSearch--fullWidth ouiFieldSearch-isClearable ouiSelectableSearch"
      role="combobox"
      type="search"
      value="Mi"
    />
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="search"
        />
      </span>
    </div>
    <div
      class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
    >
      <button
        aria-label="Clear input"
        class="ouiFormControlLayoutClearButton"
        type="button"
      >
        <span
          class="ouiFormControlLayoutClearButton__icon"
          data-ouiicon-type="cross"
        />
      </button>
    </div>
  </div>
</div>
`;
